Update: Images updates

--- a/css/styles.css
+++ b/css/styles.css
@@ -395,7 +395,7 @@ nav a:focus {
 	background-image: linear-gradient(
       rgba(0, 0, 0, 0.1), 
       rgba(0, 0, 0, 0.1)
-    ), url(../img/slider1.jpg);
+    ), url(../img/main-pink-flipped.jpg);
 	background-size: cover;
 	background-position: center;
 	padding:10em 0;
